@@ -1,0 +1,97 @@
+#!/bin/bash
+
+#
+# build statistical summary: mean, median, avg, deviation, standard deviation
+#
+# require 1 param
+# 1st param: directory result, example: SummaryCore/SummaryCore-line
+#
+
+mainDir=$1
+rm -rf $mainDir/summaryLatex.txt
+rm -rf $mainDir/summaryTotal.txt
+rm -rf $mainDir/summaryStatsASDLV.txt
+rm -rf $mainDir/summaryStatsCallDLV.txt
+rm -rf $mainDir/summaryStatsMI.txt
+rm -rf $mainDir/summaryStatsSizeM.txt
+rm -rf $mainDir/summaryStatsTime.txt
+rm -rf $mainDir/summaryStatsCtrAS.txt
+
+for dir in $mainDir/*; do 
+  if [ -d $dir ]; then
+    #sort
+    sort -n $dir/summary-ASDLV-${dir#$mainDir/}.txt > $dir/summaryASDLV.txt
+    sort -n $dir/summary-CallDLV-${dir#$mainDir/}.txt > $dir/summaryCallDLV.txt
+    sort -n $dir/summary-MI-${dir#$mainDir/}.txt > $dir/summaryMI.txt
+    sort -n $dir/summary-SizeM-${dir#$mainDir/}.txt > $dir/summarySizeM.txt
+    sort -n $dir/summary-Time-${dir#$mainDir/}.txt > $dir/summaryTime.txt
+    sort -n $dir/summary-CtrAS-${dir#$mainDir/}.txt > $dir/summaryCtrAS.txt
+
+    #print stats
+    res=${dir#$mainDir/}
+    echo $res >> $mainDir/summaryTotal.txt
+    latex=$res
+	  
+    res2=`cat $dir/summaryMI.txt | awk -f vstats.awk`
+    echo "MI = [$res2]" >> $mainDir/summaryTotal.txt
+    echo "$res = [$res2]" >> $mainDir/summaryStatsMI.txt
+    #for latex
+    avg=${res2#*avg:  }
+    avg=${avg%  med:*}
+    std=${res2#*sdvn:  }
+    std=${std%]}
+    latex="$latex&$avg&$std"
+
+    res2=`cat $dir/summarySizeM.txt | awk -f vstats.awk`
+    echo "SizeM = [$res2]" >> $mainDir/summaryTotal.txt
+    echo "$res = [$res2]" >> $mainDir/summaryStatsSizeM.txt
+    #for latex
+    avg=${res2#*avg:  }
+    avg=${avg%  med:*}
+    std=${res2#*sdvn:  }
+    std=${std%]}
+    latex="$latex&$avg&$std"
+
+    res2=`cat $dir/summaryCallDLV.txt | awk -f vstats.awk`
+    echo "CallDLV = [$res2]" >> $mainDir/summaryTotal.txt
+    echo "$res = [$res2]" >> $mainDir/summaryStatsCallDLV.txt
+    #for latex
+    avg=${res2#*avg:  }
+    avg=${avg%  med:*}
+    std=${res2#*sdvn:  }
+    std=${std%]}
+    latex="$latex&$avg&$std"
+
+    res2=`cat $dir/summaryASDLV.txt | awk -f vstats.awk`
+    echo "ASDLV = [$res2]" >> $mainDir/summaryTotal.txt
+    echo "$res = [$res2]" >> $mainDir/summaryStatsASDLV.txt
+    #for latex
+    avg=${res2#*avg:  }
+    avg=${avg%  med:*}
+    std=${res2#*sdvn:  }
+    std=${std%]}
+    latex="$latex&$avg&$std"
+
+    res2=`cat $dir/summaryCtrAS.txt | awk -f vstats.awk`
+    echo "CtrAS = [$res2]" >> $mainDir/summaryTotal.txt
+    echo "$res = [$res2]" >> $mainDir/summaryStatsCtrAS.txt
+    #for latex
+    avg=${res2#*avg:  }
+    avg=${avg%  med:*}
+    std=${res2#*sdvn:  }
+    std=${std%]}
+    latex="$latex&$avg&$std"
+
+    res2=`cat $dir/summaryTime.txt | awk -f vstats.awk`
+    echo "Time = [$res2]" >> $mainDir/summaryTotal.txt
+    echo "$res = [$res2]" >> $mainDir/summaryStatsTime.txt
+    #for latex
+    avg=${res2#*avg:  }
+    avg=${avg%  med:*}
+    std=${res2#*sdvn:  }
+    std=${std%]}
+    latex="$latex&$avg&$std"
+    echo $latex >> $mainDir/summaryLatex.txt
+  fi
+done
+
